# alibabacloud-AnalyticDB-python-demo-face-recognition

./: README.md
SeetaFace2/: .gitignore  CMakeLists.txt
SeetaFace2/cmake/: SeetaFaceConfig.cmake
SeetaFace2/python/: CMakeLists.txt  README.MD  seetafacelib.cpp  util.py
SeetaFace2/python/cmake/Modules/: BuildBoost.cmake
app/: .gitignore  app.py  dbinterface.py  face_application.py  face_database.py  face_engine.py  face_utility.py  logger.py  requirements.txt  tf_serving_client.py  utils.py
app/frontend/: index.html  login.html  management.html  package-lock.json  package.json  register.html  user_register.html
app/frontend/static/js/: index.html  main.js
app/scripts/: startup.sh
app/tf_serving/: batching.conf  config.conf
docker/: build.sh  dockerfile
start/: config_template.yml  start.sh
